# SecPAL

./: .gitignore  .gitmodules  AC.policy  README.md  SecPAL.cabal  SecPAL.hs
doc/: AC.spp  BNF.txt  Language.dot
functions/: Category.hs  Confidence.hs  HasPermission.hs  Lift.hs  PermissionsCheck.hs  Support.hs  Utilities.hs  permissionsCheck
policies/: Essos2014.spp  Makefile  Poster.spp  app_categories.spp.csv  datalog-test.spp  odd.spp  server.spp  test.spp  test2.spp  virustotal.spp
policies/server/: basics.spp  categories.spp  play_scores.spp
servers/cve/: server.py
servers/mba/: marketbasketanalysis.py  mba.r  removals.csv
servers/skb/: requirements.txt  skb.py
servers/virustotal/: .gitignore  create_db.sql  db2secpal.py  server.py  virustotal.sqlite  virustotaldb.py
src/: DatalogC.hs  SecPAL.hs  SecPALServer.hs
src/Logic/: SecPAL.hs
src/Logic/DatalogC/: Fresh.hs  Language.hs  Parser.hs  Pretty.hs  Safety.hs  Vars.hs
src/Logic/General/: ConstraintEvaluation.hs  ConstraintFunctions.hs  Constraints.hs  Entities.hs  Fresh.hs  Named.hs  Parser.hs  Pretty.hs  Types.hs  Vars.hs
src/Logic/SecPAL/: AssertionSafety.hs  Base.hs  Constraints.hs  Context.hs  DatalogC.hs  Evaluable.hs  Language.hs  Named.hs  Parser.hs  Pretty.hs  Proof.hs  Query.hs  Substitutions.hs  Vars.hs  Z3Datalog.hs
tests/: Tests.hs
tests/Tests/: ArbitraryDatalog.hs  ArbitraryParser.hs  AssertionSafety.hs  Bugs.hs  Evaluation.hs  Parser.hs  Substitutions.hs  TestResults.hs  Testable.hs
website/: .gitignore  Gemfile  bower.json  search.rb
website/public/sass/: stylesheet.sass
website/views/: index.haml
