name:                SecPAL
version:             0.1.0.0
cabal-version:       >=1.8

synopsis:            Tool for using the SecPAL policy authorization language.
description:         Implements a REPL and checking system for SecPAL

license:             GPL

license-file:        LICENSE

author:              Joseph Hallett
maintainer:          bogwonch@bogwonch.net

category:            Logic
build-type:          Simple

source-repository head
  type:             git
  location:         https://github.com/bogwonch/SecPAL.git

executable secpal
  main-is:          SecPAL.hs
  Hs-Source-Dirs:   src
  
  build-depends:    parsec, 
                    process,
                    filemanip,
                    either-unwrap,
                    readline,
                    ansi-terminal,
                    array,
                    random,
                    filepath,
                    hint

  other-modules:    Logic.SecPAL.AssertionSafety
                    Logic.SecPAL.Language
                    Logic.SecPAL.Pretty
                    Logic.SecPAL.Named
                    Logic.SecPAL.Vars
                    Logic.SecPAL.Substitutions
                    Logic.SecPAL.Context
                    Logic.SecPAL.Evaluable
                    Logic.SecPAL.Parser


  build-depends:    base >= 4.5 && < 5
  
executable tests
  main-is:          Tests.hs
  hs-source-dirs:   tests, src
  --type:             exitcode-stdio-1.0
  build-depends:    base >= 4.5 && < 5,
                    ansi-terminal,
                    parsec,
                    process,
                    QuickCheck,
                    filemanip,
                    random,
                    array,
                    mtl,
                    filepath,
                    hint


  other-modules:    Tests.TestResults
                    Tests.Testable
                    Tests.AssertionSafety
                    Tests.Evaluation
                    Tests.ArbitraryParser
                    Tests.Substitutions


